--- a/backend/EmotiSync/src/main/resources/application.properties
+++ b/backend/EmotiSync/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=220724
+spring.datasource.password=postgre
